--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@400;500;700&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Figtree', sans-serif;
 }
 
 .App-logo {
@@ -7,43 +10,98 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* font-family: proxima-nova;
+font-weight: 600;
+font-style: normal;
+font-size: 14px;
+letter-spacing: .1em;
+text-transform: uppercase; */
 
 .App-header {
   background-color: white; 
   min-height: 100vh;
-  /* display: flex; */
-  /* flex-direction: column;
-  align-items: center; */
-  /* justify-content: center; */
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
   text-align: center;
   font-size: calc(10px + 2vmin);
   color: black;
+  width: calc(100% / 3);
+  margin: 0 33% 0 33%;
+  line-height: 1.3;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  max-width: 20%;
+  max-height: 20%;
+  width: auto;
+  height: auto;
+}
+
+.nav {
+  display: flex; 
+  /* justify-content: space-around; */
 }
 
 .menu {
-  list-style-type: none;
-  display: flex; 
+  display: flex;
 }
 
-.menu li a {
+.menu li {
+  list-style-type: none;
+  display: flex;
+  margin: 50px 5px 0 5px;
+}
+
+.nav li a {
   text-decoration: none;
   color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  background-color: white;
+  padding: 20px;
+  text-align: center;
+  border: solid black 2px;
+  border-radius: 50px;
+  min-height: 30px;
+  min-width: 30px;
+  font-size: 16px;
 }
+
+button:hover {
+  background-color: black;
+  transition: 0.7s;
+  color: white;
+}
+
+footer {
+  background: #654321;
+  text-align: center;
+  color: white;
+  padding: 100px;
+  font-size: 20px;
+}
+
+footer a {
+  color: white;
+}
+
+.footer-wrapper {
+  width: 100%;
+  height: auto;
+}
+
+/* @media (min-width: 640px) {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  
+}
+@media (min-width: 1024px) {
+  
+} */
